<resources>
    <string name="app_name">Simple CRUD</string>
    <string name="autor" translatable="false">Rogério do Carmo</string>
    <string name="title_activity__cadastro">Activity_Cadastro</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="alterar">Alterar</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="excluir">Excluir</string>
    <string name="autorLabel">Autor:</string>
    <string name="crud">CRUD</string>
</resources>
